# k4j-edu

./: .clinerules  .cursorignore  .gitignore  AGENTS.md  ASSISTANT_SHARING_IMPLEMENTATION.md  CHANGELOG_RUBRIC_EDITING.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CREATOR_AUTHENTICATION_AUDIT.md  CREATOR_INTERFACE_AUDIT.md  Caddyfile  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_RUBRIC_FORM_IMPROVEMENTS.md  FINAL_STATUS_COMPLETE.md  FRONTEND_INTEGRATION_SUMMARY.md  FRONTEND_PROXY_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIX.md  ISSUE_55_FIX_SUMMARY.md  ISSUE_91_FIX_SUMMARY.md  ISSUE_95_IMPLEMENTATION_SUMMARY.md  KB_ID_MISMATCH_FIX.md  KB_NOT_FOUND_V02_MIGRATION_FIX.md  LLM_SELECTION_FIX_SUMMARY.md  ORGANIZATIONS_REPORT.md  PARENT_CHILD_CHUNKING.md  REBUILD_FRONTEND.md  ROUTER_CLEANUP_SUMMARY.md  RUBRICS_RAG_IMPLEMENTATION_COMPLETE.md  RUBRICS_RAG_TEST_RESULTS.md  RUBRIC_EDITING_COMPLETE_SUMMARY.md  RUBRIC_EDITING_FINAL_REPORT.md  RUBRIC_EDITING_QUICK_START.md  STATUS_FINAL.md  USER_BLOCKING_IMPLEMENTATION_SUMMARY.md  deployment.md  docker-compose-dev.yaml  docker-compose-example.yaml  (+7 more)
lamb-cli/: README.md  pyproject.toml
lamb-cli/Documentation/: lamb_cli_architecture.md  prd.md  tutorial.md
lamb-cli/src/lamb_cli/: __init__.py  client.py  config.py  errors.py  main.py  output.py
lamb-cli/tests/: conftest.py  test_client.py  test_config.py  test_output.py
lamb-cli/tests/test_commands/: test_analytics.py  test_assistant.py  test_chat.py  test_job.py  test_kb.py  test_login.py  test_model.py  test_org.py  test_template.py  (+1 more)
(+546 files in other folders)
