[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamb-cli"
version = "0.1.0"
description = "CLI for LAMB (Learning Assistants Manager and Builder)"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
lamb = "lamb_cli.main:_cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lamb_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
